[project]
name = "demo"
version = "0.1.0"
description = ""
authors = [
    {name = "srikant",email = "dhondi.srikanth@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.20.2,<2.0.0)"
]
